--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ AltaPerspectiva/src/AltaPerspectiva/node_modules/
 AltaPerspectiva/src/AltaPerspectiva/bower_components/
 AltaPerspectiva/src/AltaPerspectiva/obj/Debug/netcoreapp1.0/.IncrementalCache
 AltaPerspectiva/src/AltaPerspectiva/obj/
+AltaPerspectiva/src/AltaPerspectiva/bin/
