--- a/AltaPerspectiva/src/AltaPerspectiva/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva/package.json
@@ -11,6 +11,13 @@
     "gulp-concat": "^2.6.0",
     "gulp-typescript": "^2.13.6",
     "gulp-tsc": "^1.2.0",
+    "gulp-filter": "4.0.0",
+    "gulp-less": "3.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-cssmin": "0.1.7",
+    "gulp-uglify": "2.0.0",
+    "gulp-bower": "0.0.13",
+    "del": "2.2.2",
     "main-bower-files": "2.11.1"
   }
 }
