--- a/AltaPerspectiva/src/AltaPerspectiva/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva/package.json
@@ -29,8 +29,15 @@
     "typings": "^1.3.2",
     "gulp": "^3.9.1",
     "path": "^0.12.7",
+    "gulp-less": "3.1.0",
+    "gulp-bower": "0.0.13",
+    "gulp-cssmin": "0.1.7",
+    "gulp-filter": "4.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-uglify": "1.5.3",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
+    "del": "2.2.0",
     "gulp-typescript": "^2.13.6",
     "gulp-tsc": "^1.2.0"
   }
