--- a/AltaPerspectiva/src/AltaPerspectiva/tsScripts/tsconfig.json
+++ b/AltaPerspectiva/src/AltaPerspectiva/tsScripts/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "noEmitOnError": true,
     "noImplicitAny": false,
-    "outDir": "../Scripts/",
+    "outDir": "../wwwroot/js",
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
