--- a/AltaPerspectiva/src/AltaPerspectiva/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva/package.json
@@ -16,13 +16,12 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
-
+    "angular2-in-memory-web-api": "0.0.20",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
-    "angular2-in-memory-web-api": "0.0.20"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "typescript": "^2.0.2",
@@ -31,6 +30,7 @@
     "path": "^0.12.7",
     "gulp-less": "3.1.0",
     "gulp-bower": "0.0.13",
+    "main-bower-files": "2.13.1",
     "gulp-cssmin": "0.1.7",
     "gulp-filter": "4.0.0",
     "gulp-rename": "1.2.2",
