--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ AltaPerspectiva/wwwroot/lib/
 AltaPerspectiva/src/AltaPerspectiva/typings/
 AltaPerspectiva/src/AltaPerspectiva/wwwroot/css/
 AltaPerspectiva/src/AltaPerspectiva/wwwroot/js/
+AltaPerspectiva/.vs/AltaPerspectiva/v14/.suo
