--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ AltaPerspectiva/src/AltaPerspectiva/typings/
 AltaPerspectiva/src/AltaPerspectiva/wwwroot/css/
 AltaPerspectiva/src/AltaPerspectiva/wwwroot/js/
 AltaPerspectiva/.vs/AltaPerspectiva/v14/.suo
+/AltaPerspectiva/.vs
