Add core interfaces for project

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ AltaPerspectiva/src/AltaPerspectiva/wwwroot/css/
 AltaPerspectiva/src/AltaPerspectiva/wwwroot/js/
 AltaPerspectiva/.vs/AltaPerspectiva/v14/.suo
 /AltaPerspectiva/.vs
+/AltaPerspectiva/src/AltaPerspectiva.Core/obj/Debug/netstandard1.6/.IncrementalCache
+/AltaPerspectiva/src/AltaPerspectiva.Core/obj/Debug/netstandard1.6/.SDKVersion
+/AltaPerspectiva/src/AltaPerspectiva.Core/obj/Debug/netstandard1.6/dotnet-compile-csc.rsp
+/AltaPerspectiva/src/AltaPerspectiva.Core/obj/Debug/netstandard1.6/dotnet-compile.assemblyinfo.cs
+/AltaPerspectiva/src/AltaPerspectiva.Core/obj/Debug/netstandard1.6/dotnet-compile.rsp
