--- a/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0.0-*",
 
-  "dependencies": {
+  "dependencies": {    
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
     "NETStandard.Library": "1.6.0",
@@ -11,7 +11,8 @@
 
   "frameworks": {
     "netstandard1.6": {
-      "imports": "dnxcore50"
+      "imports": "dnxcore50",
+      "dependencies": { "System.Runtime": "4.0.21-beta-23516" }
     }
   }
 }
