add entity framework for read and write repository

--- a/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
@@ -1,9 +1,10 @@
 {
   "version": "1.0.0-*",
 
-  "dependencies": {    
+  "dependencies": {
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
+    "Microsoft.EntityFrameworkCore": "1.0.0",   
     "NETStandard.Library": "1.6.0",
     "System.Collections.NonGeneric": "4.0.1",
     "System.Reflection.TypeExtensions": "4.1.0"
@@ -12,7 +13,7 @@
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50",
-      "dependencies": { "System.Runtime": "4.0.21-beta-23516" }
+      "dependencies": { "System.Runtime": "4.1.0" }
     }
   }
 }
