Build file deleted and ignored

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ AltaPerspectiva/src/Questions.Command/Questions.Command.xproj.user
 /AltaPerspectiva/src/AltaPerspectiva.Identity/obj/Debug/netstandard1.6/dotnet-compile-csc.rsp
 /AltaPerspectiva/src/AltaPerspectiva.Identity/obj/Debug/netstandard1.6/dotnet-compile.assemblyinfo.cs
 /AltaPerspectiva/src/AltaPerspectiva.Identity/obj/Debug/netstandard1.6/dotnet-compile.rsp
+/AltaPerspectiva/src/AltaPerspectiva.Web/project.lock.json
