--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.lock.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.lock.json
@@ -4421,7 +4421,8 @@
           "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
           "Microsoft.Extensions.Configuration.Json": "1.0.0",
           "Microsoft.Extensions.PlatformAbstractions": "1.0.0",
-          "NETStandard.Library": "1.6.0"
+          "NETStandard.Library": "1.6.0",
+          "OpenIddict": "1.0.0"
         },
         "compile": {
           "netstandard1.6/AltaPerspectiva.Identity.dll": {}
