--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ AltaPerspectiva/src/Questions.Command/Questions.Command.xproj.user
 /AltaPerspectiva/src/AltaPerspectiva.Identity/obj/Debug/netstandard1.6/dotnet-compile.assemblyinfo.cs
 /AltaPerspectiva/src/AltaPerspectiva.Identity/obj/Debug/netstandard1.6/dotnet-compile.rsp
 /AltaPerspectiva/src/AltaPerspectiva.Web/project.lock.json
+AltaPerspectiva/src/AltaPerspectiva.Identity/project.lock.json
