--- a/AltaPerspectiva/src/AltaPerspectiva.Infrastructure/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Infrastructure/project.json
@@ -2,9 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "AltaPerspectiva.Core": "1.0.0-*",
-    "AltaPerspectiva.Identity": "1.0.0-*",
-    "AltaPerspectiva.Infrastructure": "1.0.0-*",
+    "Microsoft.EntityFrameworkCore": "1.0.0",
     "NETStandard.Library": "1.6.0"
   },
 
