--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -9,5 +9,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "DefaultConnection": {
+      "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva1;Initial Catalog=AltaPerspectiva1;Integrated Security=True;MultipleActiveResultSets=True;"
+    }
   }
 }
