--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -12,7 +12,7 @@
   },
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva1;Initial Catalog=AltaPerspectiva1;Integrated Security=True;MultipleActiveResultSets=True;"
+      "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
     }
   }
 }
