--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
+    "AltaPerspectiva.Identity": "1.0.0-*",
     "AspNet.Security.OAuth.Introspection": "1.0.0-alpha2-final",
     "AspNet.Security.OAuth.Validation": "1.0.0-alpha2-final",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
@@ -32,7 +33,8 @@
     "NWebsec.AspNetCore.Middleware": "1.0.0-gamma1-15",
     "OpenIddict": "1.0.0-*",
     "OpenIddict.Mvc": "1.0.0-*",
-    "Questions.Command": "1.0.0-*"
+    "Questions.Command": "1.0.0-*",
+    "Questions.Query": "1.0.0-*"
   },
 
   "tools": {
