--- a/AltaPerspectiva/src/Questions.Command/project.json
+++ b/AltaPerspectiva/src/Questions.Command/project.json
@@ -8,7 +8,8 @@
     "Microsoft.AspNetCore.Routing": "1.0.1",
     "Microsoft.AspNetCore.Routing.Abstractions": "1.0.1",
     "Microsoft.EntityFrameworkCore.Relational": "1.0.0",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "Questions.Domain": "1.0.0-*"
   },
 
   "frameworks": {
