--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -21,7 +21,9 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "ng2-ckeditor": "1.1.5",
+    "ng2-select": "1.1.2"
   },
   "devDependencies": {
     "typescript": "^2.0.2",
