Ignore wwwroot lib

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ AltaPerspectiva/src/Questions.Command/bin/
 AltaPerspectiva/src/AltaPerspectiva.Web/bin/
 AltaPerspectiva/src/AltaPerspectiva.Web/obj/
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/
+AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/libs/
+AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/lib/
 AltaPerspectiva/src/Questions.Command/obj/
 AltaPerspectiva/src/AltaPerspectiva/bower_components/
 AltaPerspectiva/src/AltaPerspectiva/node_modules/
