--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -17,13 +17,14 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.20",
+    "angular2-infinite-scroll": "^0.2.7",
     "core-js": "^2.4.1",
+    "ng2-ckeditor": "1.1.5",
+    "ng2-select": "1.1.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
-    "ng2-ckeditor": "1.1.5",
-    "ng2-select": "1.1.2"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "typescript": "^2.0.2",
