Some infrasruted added to and commiteed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -36,6 +36,9 @@
     "OpenIddict.Mvc": "1.0.0-*",
     "Questions.Command": "1.0.0-*",
     "Questions.Query": "1.0.0-*",
+    "UserProfile.Command": "1.0.0-*",
+    "UserProfile.Query": "1.0.0-*",
+
     "System.ServiceModel.Primitives": "4.0.0"
   },
 
