--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -12,8 +12,10 @@
   },
   "Data": {
     "DefaultConnection": {
-      //"ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-      "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
+      "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      //"ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
     }
-  }
+  },
+  "CategoryImage": "../../../../category/",
+  "ProfileImage": "../../../../profile/"
 }
