akash:FileUpload Added to my repository

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -16,6 +16,7 @@
       "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
     }
   },
-  "CategoryImage": "../../../../category/",
-  "ProfileImage": "../../../../profile/"
+  "CategoryImage": "../../../../categories/",
+  "ProfileImage": "../../../../profile/",
+  "CategoryUpload": "categories/"
 }
