--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -18,5 +18,6 @@
   },
   "CategoryImage": "../../../../categories/",
   "ProfileImage": "../../../../profile/",
-  "CategoryUpload": "categories/"
+  "CategoryUpload": "categories/",
+  "ProfileUpload": "profile/"
 }
