Fix categories image path Error Get path form Config

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -16,6 +16,6 @@
       "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
     }
   },
-  "CategoryImage": "../../../../category/",
+  "CategoryImage": "../../../../categories/",
   "ProfileImage": "../../../../profile/"
 }
