--- a/AltaPerspectiva/src/Questions.Domain/project.json
+++ b/AltaPerspectiva/src/Questions.Domain/project.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
     "AltaPerspectiva.Identity": "1.0.0-*",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "UserProfile.Domain": "1.0.0-*"
   },
 
   "frameworks": {
