--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -17,7 +17,7 @@
     }
   },
   "CategoryImage": "../../../../categories/",
-  "ProfileImage": "../../../../profile/"
+  "ProfileImage": "../../../../profile/",
   "CategoryUpload": "categories/",
   "ProfileUpload": "profile/"
 }
