--- a/AltaPerspectiva/src/AltaPerspectiva.Identity/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Identity/project.json
@@ -8,7 +8,7 @@
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.PlatformAbstractions": "1.0.0",
-    "OpenIddict": "1.0.0-*",
+    "OpenIddict": "1.0.0-beta2-0503",
     "NETStandard.Library": "1.6.0"
   },
 
