--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
@@ -40,9 +40,9 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "NWebsec.AspNetCore.Middleware": "1.0.0-gamma1-15",
-    "OpenIddict": "1.0.0-*",
-    "OpenIddict.Mvc": "1.0.0-*",
-    "OpenIddict.EntityFramework": "1.0.0-*"
+    "OpenIddict": "1.0.0-beta2-0503",
+    "OpenIddict.EntityFrameworkCore": "1.0.0-beta2-0503",
+    "OpenIddict.Mvc": "1.0.0-beta2-0503"
   },
 
   "frameworks": {
