akash:UserInfo added to

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ AltaPerspectiva/src/UserProfile.Query/bin/
 AltaPerspectiva/src/UserProfile.Domain/obj/
 AltaPerspectiva/src/UserProfile.Command/bin/
 AltaPerspectiva/src/UserProfile.Command/obj/
+AltaPerspectiva/src/AltaPerspectiva.Api/AltaPerspectiva.Api.xproj.user
