--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
+    "@types/jquery": "^2.0.39",
     "angular2-in-memory-web-api": "0.0.20",
     "angular2-infinite-scroll": "^0.2.7",
     "core-js": "^2.4.1",
