--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -19,7 +19,7 @@
     "@types/jquery": "^2.0.39",
     "angular2-in-memory-web-api": "0.0.20",
     "angular2-infinite-scroll": "^0.2.7",
-    "angular2-toaster": "2.0.0",
+    "ng2-toastr": "1.3.6",
     "ng2-popover": "0.0.14",
     "core-js": "^2.4.1",
     "ng2-ckeditor": "1.1.5",
