--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/libs/@angular/
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/lib/
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/Scripts
 AltaPerspectiva/src/Questions.Command/obj/
-AltaPerspectiva/src/AltaPerspectiva/bower_components/
-AltaPerspectiva/src/AltaPerspectiva/node_modules/
+AltaPerspectiva/src/AltaPerspectiva.Web/bower_components/
+AltaPerspectiva/src/AltaPerspectiva.Web/node_modules/
 AltaPerspectiva/src/Questions.Query/Questions.Query.xproj.user
 AltaPerspectiva/src/AltaPerspectiva.Core/AltaPerspectiva.Core.xproj.user
 AltaPerspectiva/src/AltaPerspectiva.Web/AltaPerspectiva.Web.xproj.user
