--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -19,11 +19,11 @@
     "@types/jquery": "^2.0.39",
     "angular2-in-memory-web-api": "0.0.20",
     "angular2-infinite-scroll": "^0.2.7",
-    "ng2-toastr": "1.3.6",
-    "ng2-popover": "0.0.14",
     "core-js": "^2.4.1",
     "ng2-ckeditor": "1.1.5",
     "ng2-select": "1.1.2",
+    "ng2-toastr": "1.3.6",
+    "ngx-popover": "0.0.16",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
