--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -44,7 +44,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "del": "2.2.0",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "3.1.4",
     "gulp-tsc": "^1.2.0"
   }
 }
