--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ AltaPerspectiva/src/AltaPerspectiva.Api/AltaPerspectiva.Api.xproj.user
 AltaPerspectiva/AltaPerspectiva.vsext
 AltaPerspectiva/src/AltaPerspectiva.Api/bin/Debug/netstandard1.6/AltaPerspectiva.Api.dll
 AltaPerspectiva/src/AltaPerspectiva.Api/bin/Debug/netstandard1.6/AltaPerspectiva.Api.pdb
+/AltaPerspectiva/src/AltaPerspectiva.Web/typings
