--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -24,6 +24,7 @@
     "ng2-select": "1.1.2",
     "ng2-toastr": "1.3.6",
     "ngx-popover": "0.0.16",
+    "ngx-quill": "0.3.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
