--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ AltaPerspectiva/src/Blog.Domain/bin/
 AltaPerspectiva/src/Blog.Query/project.lock.json
 AltaPerspectiva/src/Blog.Domain/project.lock.json
 AltaPerspectiva/src/Blog.Command/project.lock.json
+AltaPerspectiva/src/Blog.Query/obj/
+AltaPerspectiva/src/Blog.Command/obj/
+AltaPerspectiva/src/Blog.Query/bin/
+AltaPerspectiva/src/Blog.Command/bin/
