--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -32,12 +32,15 @@
     },
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "NWebsec.AspNetCore.Middleware": "1.0.0-gamma1-15",
-    "OpenIddict": "1.0.0-*",
-    "OpenIddict.Mvc": "1.0.0-*",
+    "OpenIddict": "1.0.0-beta2-0503",
+    "OpenIddict.EntityFrameworkCore": "1.0.0-beta2-0503",
+    "OpenIddict.Mvc": "1.0.0-beta2-0503",
     "Questions.Command": "1.0.0-*",
     "Questions.Query": "1.0.0-*",
     "UserProfile.Command": "1.0.0-*",
     "UserProfile.Query": "1.0.0-*",
+    "Blog.Command": "1.0.0-*",
+    "Blog.Query": "1.0.0-*",
 
     "System.ServiceModel.Primitives": "4.0.0"
   },
