--- a/AltaPerspectiva/src/Blog.Query/project.json
+++ b/AltaPerspectiva/src/Blog.Query/project.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
     "AltaPerspectiva.Identity": "1.0.0-*",
+    "Blog.Domain": "1.0.0-*",
     "NETStandard.Library": "1.6.0"
   },
 
