--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ AltaPerspectiva/src/Blog.Command/bin/
 AltaPerspectiva/src/Blog.Query/Blog.Query.xproj.user
 AltaPerspectiva/src/Blog.Command/Blog.Command.xproj.user
 AltaPerspectiva/src/Blog.Domain/Blog.Domain.xproj.user
+AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/profile/gitignore_global.txt
