akash:Precommit before azure file storage

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -42,7 +42,8 @@
     "Blog.Command": "1.0.0-*",
     "Blog.Query": "1.0.0-*",
 
-    "System.ServiceModel.Primitives": "4.0.0"
+    "System.ServiceModel.Primitives": "4.0.0",
+    "WindowsAzure.Storage": "8.1.1",
   },
 
   "tools": {
