--- a/AltaPerspectiva/src/AltaPerspectiva.Identity/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Identity/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
-    "IdentityConnection": {
-      "ConnectionString": "Server=.\\SQLEXPRESS;Database=AltaPerspectiva;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": {
+      "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   }
 }
