--- a/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
@@ -4,10 +4,11 @@
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-    "Microsoft.EntityFrameworkCore": "1.0.0",   
+    "Microsoft.EntityFrameworkCore": "1.0.0",
     "NETStandard.Library": "1.6.0",
     "System.Collections.NonGeneric": "4.0.1",
-    "System.Reflection.TypeExtensions": "4.1.0"
+    "System.Reflection.TypeExtensions": "4.1.0",
+    "System.Data.SqlClient": "4.1.0"
   },
 
   "frameworks": {
