--- a/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Core/project.json
@@ -5,16 +5,17 @@
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
     "Microsoft.EntityFrameworkCore": "1.0.0",
-    "NETStandard.Library": "1.6.0",
+    "NETStandard.Library": "1.6.1",
     "System.Collections.NonGeneric": "4.0.1",
-    "System.Reflection.TypeExtensions": "4.1.0",
-    "System.Data.SqlClient": "4.1.0"
+    "System.Reflection.TypeExtensions": "4.3.0",
+    "System.Data.SqlClient": "4.1.0",
+    "Sendgrid": "9.0.12"
   },
 
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50",
-      "dependencies": { "System.Runtime": "4.1.0" }
+      "dependencies": { "System.Runtime": "4.3.0" }
     }
   }
 }
