--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/config.json
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/config.json
@@ -9,6 +9,7 @@
   "Data": {
     "DefaultConnection": {
       "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    }
+    },
+    "SendGridApiKey": "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"
   }
 }
