--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
@@ -44,7 +44,8 @@
     "OpenIddict": "1.0.0-beta2-0503",
     "OpenIddict.EntityFrameworkCore": "1.0.0-beta2-0503",
     "OpenIddict.Mvc": "1.0.0-beta2-0503",
-    "Microsoft.AspNetCore.Session": "1.0.0"
+    "Microsoft.AspNetCore.Session": "1.0.0",
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.1.0"
   },
 
   "frameworks": {
