change publish settings

--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/project.json
@@ -80,7 +80,7 @@
     "include": [
       "wwwroot",
       "Views",
-      "config.json",
+      "appsettings.json",
       "web.config"
     ]
   }
