akash:Gitingire updated only

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/profile/gitignore_global.txt
 AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
 AltaPerspectiva/src/Altaperspectiva.OpenId/config.json
 AltaPerspectiva/src/Altaperspectiva.OpenId/appsettings.json
+AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/node_modules/
