--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "scripts": {
     "postinstall": "typings install",
-    "typings": "typings"
+    "typings": "typings",
+    "ngc": "ngc -p ./tsconfig-aot.json",
+    "start": "tsc && npm run startWebpackDevServer",
+    "startWebpackDevServer": "webpack-dev-server --inline --progress --port 8080",
+    "build": "SET NODE_ENV=development && webpack -d --color && dotnet run",
+    "buildProduction": "npm run ngc && SET NODE_ENV=production && webpack -d --color && dotnet run",
+    "lint": "tslint ./angular2app/**/*.ts -t verbose",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "dependencies": {
     "@angular/common": "2.4.0",
@@ -31,8 +39,46 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+
+
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
+    "@types/jasmine": "^2.5.36",
+    "@types/node": "7.0.0",
+    "angular-router-loader": "^0.5.0",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "canonical-path": "0.0.2",
+    "clean-webpack-plugin": "^0.1.15",
+    "concurrently": "^3.1.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
+    "http-server": "^0.9.0",
+    "ie-shim": "^0.1.0",
+    "jquery": "^2.2.0",
+    "json-loader": "^0.5.4",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
+    "node-sass": "^4.3.0",
+    "protractor": "~4.0.14",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.1.1",
+    "source-map-loader": "^0.1.6",
+    "style-loader": "^0.13.1",
+    "ts-helpers": "^1.1.2",
+    "tslint": "^4.3.1",
+    "tslint-loader": "^3.3.0",    
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.16.2",
+
+
+
     "gulp": "^3.9.1",
     "path": "^0.12.7",
     "gulp-less": "3.1.0",
