--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/tsconfig.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/tsconfig.json
@@ -1,19 +1,21 @@
 ﻿{
   "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "module": "commonjs",
-    "noEmitOnError": true,
-    "noImplicitAny": false,
-    "outDir": "../wwwroot/js",
-    "removeComments": false,
-    "sourceMap": true,
-    "target": "es5",
-    "moduleResolution": "node"
+    "lib": [
+      "es2015",
+      "dom"
+    ],
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true
   },
   "exclude": [
     "node_modules",
-    "typings/index",
-    "typings/index.d.ts"
+    "typings/globals",
+    "typings/main.d.ts"    
   ]
 }
