--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/config.json
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/config.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=openiddict-code-flow-sample;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=DESKTOP-T631FTK\\SQLEXPRESS;Database=OpennId;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
