--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -7,8 +7,9 @@
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Authentication.OpenIdConnect": "1.0.0",
     "Microsoft.AspNetCore.Authorization": "1.0.0",
+    "Microsoft.AspNetCore.Session": "1.1.2",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
-    "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
+    "Microsoft.AspNetCore.Http.Abstractions": "1.1.2",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
@@ -43,7 +44,7 @@
     "Blog.Query": "1.0.0-*",
     "System.ServiceModel.Primitives": "4.0.0",
     "WindowsAzure.Storage": "8.1.1",
-    "HtmlAgilityPack.NetCore": "1.5.0.1",
+    "HtmlAgilityPack.NetCore": "1.5.0.1"
   },
 
   "tools": {
