--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -44,7 +44,8 @@
     "Blog.Query": "1.0.0-*",
     "System.ServiceModel.Primitives": "4.0.0",
     "WindowsAzure.Storage": "8.1.1",
-    "HtmlAgilityPack.NetCore": "1.5.0.1"
+    "HtmlAgilityPack.NetCore": "1.5.0.1",
+    "Dapper": "1.50.2"
   },
 
   "tools": {
