--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
-    "AltaPerspectiva.Identity": "1.0.0-*",
-    "AspNet.Security.OAuth.Introspection": "1.0.0-alpha2-final",
-    "AspNet.Security.OAuth.Validation": "1.0.0-alpha2-final",
+    "AspNet.Security.OAuth.Introspection": "1.0.0",
+    "AspNet.Security.OAuth.Validation": "1.0.0",
+    "Blog.Command": "1.0.0-*",
+    "Blog.Query": "1.0.0-*",
+    "HtmlAgilityPack.NetCore": "1.5.0.1",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Authentication.OpenIdConnect": "1.0.0",
     "Microsoft.AspNetCore.Authorization": "1.0.0",
-    "Microsoft.AspNetCore.Session": "1.1.2",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Http.Abstractions": "1.1.2",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
@@ -15,14 +16,17 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
+    "Dapper": "1.50.2",
+    "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
     "Microsoft.AspNetCore.Routing": "1.0.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
+    "Microsoft.AspNetCore.Session": "1.1.2",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
-    "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
+    "Microsoft.Extensions.Caching.Abstractions": "1.1.2",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
-    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging": "1.1.1",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
@@ -38,14 +42,10 @@
     "OpenIddict.Mvc": "1.0.0-beta2-0503",
     "Questions.Command": "1.0.0-*",
     "Questions.Query": "1.0.0-*",
+    "System.ServiceModel.Primitives": "4.0.0",
     "UserProfile.Command": "1.0.0-*",
     "UserProfile.Query": "1.0.0-*",
-    "Blog.Command": "1.0.0-*",
-    "Blog.Query": "1.0.0-*",
-    "System.ServiceModel.Primitives": "4.0.0",
-    "WindowsAzure.Storage": "8.1.1",
-    "HtmlAgilityPack.NetCore": "1.5.0.1",
-    "Dapper": "1.50.2"
+    "WindowsAzure.Storage": "8.1.1"
   },
 
   "tools": {
