--- a/AltaPerspectiva/src/Blog.Command/project.json
+++ b/AltaPerspectiva/src/Blog.Command/project.json
@@ -1,11 +1,11 @@
 ﻿{
   "version": "1.0.0-*",
 
-  "dependencies": { 
+  "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
-    "AltaPerspectiva.Identity": "1.0.0-*",
-    "NETStandard.Library": "1.6.0",
-    "Blog.Domain": "1.0.0-*"
+    "NETStandard.Library": "1.6.1",
+    "Blog.Domain": "1.0.0-*",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.2"
   },
 
   "frameworks": {
