--- a/AltaPerspectiva/src/Blog.Query/project.json
+++ b/AltaPerspectiva/src/Blog.Query/project.json
@@ -3,9 +3,9 @@
 
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
-    "AltaPerspectiva.Identity": "1.0.0-*",
     "Blog.Domain": "1.0.0-*",
-    "NETStandard.Library": "1.6.0"
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.2",
+    "NETStandard.Library": "1.6.1"
   },
 
   "frameworks": {
