--- a/AltaPerspectiva/src/Questions.Query/project.json
+++ b/AltaPerspectiva/src/Questions.Query/project.json
@@ -3,6 +3,7 @@
 
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.2",
     "NETStandard.Library": "1.6.0",
     "Questions.Domain": "1.0.0-*",
     "System.Linq.Expressions": "4.3.0-preview1-24530-04"
