--- a/AltaPerspectiva/src/UserProfile.Query/project.json
+++ b/AltaPerspectiva/src/UserProfile.Query/project.json
@@ -1,11 +1,12 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
     "AltaPerspectiva.Core": "1.0.0-*",
     "NETStandard.Library": "1.6.0",
     "UserProfile.Domain": "1.0.0-*",
-    "System.Linq.Expressions": "4.3.0-preview1-24530-04"
+    "System.Linq.Expressions": "4.3.0-preview1-24530-04",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.2"
   },
 
   "frameworks": {
