--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/polyfills.bundle.js
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/vendor.bundle.js
 *.ngstyle.js
 AltaPerspectiva/src/AltaPerspectiva.Web/packages/
+AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/**/*.js
