Akash:Logging added in wwwroot/logs and some optimization in query level in asp.net core

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/project.json
@@ -45,7 +45,9 @@
     "System.ServiceModel.Primitives": "4.0.0",
     "UserProfile.Command": "1.0.0-*",
     "UserProfile.Query": "1.0.0-*",
-    "WindowsAzure.Storage": "8.1.1"
+    "WindowsAzure.Storage": "8.1.1",
+    "Serilog.Extensions.Logging.File": "1.1.0",
+    "Microsoft.Extensions.Logging.Filter": "1.1.2"
   },
 
   "tools": {
