Logo click reload. filter parameter page reset

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/app.bundle.js.map
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/polyfills.bundle.js.map
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/vendor.bundle.js.map
 AltaAuthentication/AltaAuthentication/.vs/AltaAuthentication/v15/.suo
+AltaPerspectiva/src/AltaPerspectiva.Identity/bin/
