Akash:Description  is corrected by max json length in web.config

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/web.config
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/web.config
@@ -11,4 +11,16 @@
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
   </system.webServer>
+
+
+   <system.web.extensions>
+       <scripting>
+           <webServices>
+               <!-- Update this value to change the value to 
+                    a larger value that can accommodate your JSON 
+                    strings -->
+               <jsonSerialization maxJsonLength="86753090" />
+           </webServices>
+       </scripting>
+   </system.web.extensions>
 </configuration>
