authorization  url string taken from config, removed hard code url from user question component

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/AuthorizationServer.csproj
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/AuthorizationServer.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\AuthorizationServer20170824011836 - Web Deploy.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="wwwroot\css\alta-font\alta-fonts.css" />
     <Content Include="wwwroot\css\alta-font\arial.ttf" />
     <Content Include="wwwroot\css\alta-font\font-icon.eot" />
