Akash:Follower bug fixed with user profile

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/polyfills.bundle.js.map
 AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/dist/vendor.bundle.js.map
 AltaAuthentication/AltaAuthentication/.vs/AltaAuthentication/v15/.suo
 AltaPerspectiva/src/AltaPerspectiva.Identity/bin/
+AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/assets/like-logo-cf99d2.png
