--- a/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/package.json
@@ -14,7 +14,7 @@
     "watch-webpack-production": "npm run build-production --watch --color",
     "publish-for-iis": "npm run build-production && dotnet publish -c Release"
   },
-  "dependencies": { 
+  "dependencies": {
     "@angular/common": "2.4.0",
     "@angular/compiler": "2.4.0",
     "@angular/core": "2.4.0",
@@ -33,13 +33,12 @@
     "ng2-select": "1.1.2",
     "ng2-toastr": "1.3.6",
     "ngx-popover": "0.0.16",
+    "ngx-facebook": "2.4.0",
     "ngx-quill": "0.3.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.23",
-
-
     "angular-in-memory-web-api": "0.3.1",
     "@angular/compiler-cli": "~2.4.0",
     "@angular/platform-server": "~2.4.0",
