--- a/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/appsettings.json
@@ -13,10 +13,10 @@
   "Data": {
     "DefaultConnection": {
       //Production
-      //"ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=AltaPerspectiva;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
       //staging
-      "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=Staging;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      //"ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=Staging;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
       //Local
       //"ConnectionString": "Server=.\\SQLEXPRESS;Initial Catalog=AltaPerspectiva;Integrated Security=True;MultipleActiveResultSets=True;"
