--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/config.json
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/config.json
@@ -11,7 +11,7 @@
   "Url": "http://www.altaperspectiva.com",
   "StagingData": {
     "DefaultConnection": {
-      //"ConnectionString": "Server=DESKTOP-T631FTK\\SQLEXPRESS;Database=OpennId;Trusted_Connection=True;MultipleActiveResultSets=true"
+      //"ConnectionString": "Server=DESKTOP-DLNSPN9;Database=OpenId;Trusted_Connection=True;MultipleActiveResultSets=true",
       "ConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=OpenId_Staging;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
       "AltaPerspectivaConnectionString": "Server=tcp:servidoraltap.database.windows.net,1433;Initial Catalog=Staging;Persist Security Info=False;User ID=altaperspectiva;Password=*AltaP2016*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
